# tts-ms

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_chatterbox.txt  requirements_cosyvoice.txt  requirements_f5tts.txt  requirements_kokoro.txt  requirements_legacy.txt  requirements_piper.txt  requirements_qwen3tts.txt  requirements_styletts2.txt  requirements_vibevoice.txt  voice_scripts_en.txt  voice_scripts_tr.txt
.github/workflows/: ci.yml  docker.yml
config/: settings.yaml
docs/: DOCUMENTATION.md  ENGINE_ENVIRONMENTS.md  ENGINE_REQUIREMENTS.md  EXAMPLES.md  USAGE.md  WORKFLOW.md
nginx/: nginx.conf
notebooks/: 01_piper_benchmark.ipynb  02_legacy_xtts_benchmark.ipynb  03_f5tts_benchmark.ipynb  04_styletts2_benchmark.ipynb  05_cosyvoice_benchmark.ipynb  06_chatterbox_benchmark.ipynb  benchmark_script.py  local_legacy_benchmark.ipynb  local_piper_test.ipynb
output/legacy_benchmark/: results.json  summary.txt
output/piper_benchmark/: results.json  summary.txt
scripts/: benchmark.py  colab_bootstrap.sh  download_models.sh  fix_results.py  full_benchmark.py  run_uvicorn_colab.sh
src/tts_ms/: __init__.py  cli.py  main.py
src/tts_ms/api/: __init__.py  dependencies.py  openai_compat.py  routes.py  schemas.py
src/tts_ms/core/: __init__.py  config.py  engine_setup.py  metrics.py  resources.py
src/tts_ms/core/logging/: __init__.py  colors.py  context.py  formatters.py  levels.py
src/tts_ms/services/: __init__.py  tts_service.py  validators.py
src/tts_ms/tts/: __init__.py  batcher.py  cache.py  chunker.py  concurrency.py  engine.py  storage.py
src/tts_ms/tts/engines/: __init__.py  chatterbox_engine.py  cosyvoice_engine.py  dynamic_backend.py  f5tts_engine.py  helpers.py  kokoro_engine.py  legacy_engine.py  piper_engine.py  qwen3tts_engine.py  (+2 more)
src/tts_ms/utils/: __init__.py  audio.py  text.py  timeit.py
tests/: run_norm_test.py  test_01_config.py  test_02_engine_smoke.py  test_03_chunker.py  test_04_api_blocking.py  test_04_wav_header.py  test_05_cache.py  test_06_stream_contract.py  test_07_benchmark_dry_run.py  test_07_logging_persistence.py  test_08_cli.py  test_08_health.py  test_09_logging_levels.py  test_10_logging_colors.py  test_11_pyproject.py  test_12_docker_build.py  test_13_breath_groups.py  test_14_concurrency.py  test_15_batching.py  test_16_openai_compat.py  test_17_metrics.py  test_18_fix_deadlock.py  test_19_resources.py  test_cache_ttl.py  test_concurrent_api.py  test_engine_batching.py  test_engine_chatterbox_smoke.py  test_engine_cosyvoice_smoke.py  test_engine_f5tts_smoke.py  test_engine_factory.py  test_engine_kokoro_smoke.py  test_engine_piper_smoke.py  test_engine_qwen3tts_smoke.py  test_engine_setup.py  test_engine_styletts2_smoke.py  test_engine_vibevoice_smoke.py  test_error_handling.py  test_normalization.py  test_runs_directory.py  test_storage_ttl.py  (+2 more)
